# OpenSnip

./: .gitignore  LICENSE  README.md  README.zh-CN.md  eslint.config.mjs  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
docs/: DOMAIN_MODEL.md  ERROR_ARCHITECTURE.md  PERFORMANCE_BUDGET.md  RELEASE_STRATEGY.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: clipboard.rs  hotkey.rs  mod.rs  ocr.rs  pin.rs  recording.rs  screenshot.rs  translation.rs
src-tauri/src/models/: clipboard.rs  domain.rs  mod.rs  ocr.rs  pin.rs  recording.rs  screenshot.rs  translation.rs
src-tauri/src/plugins/: hotkey.rs  mod.rs  tray.rs
src-tauri/src/services/: clipboard.rs  mod.rs  ocr.rs  pin.rs  recording.rs  screenshot.rs  translation.rs
src-tauri/src/utils/: error.rs  logger.rs  mod.rs
src/components/annotation/: AnnotationCanvas.tsx  AnnotationToolbar.tsx  BeautifyPanel.tsx  CanvasContext.tsx  LayerPanel.tsx  beautify.ts  canvasEffects.ts  index.ts  snapToGuides.ts  svgExport.ts
src/components/capture/: index.ts  (+3 more)
src/hooks/: index.ts  useCapture.ts  useCaptureHistory.ts  useColorPicker.ts  useDebounce.ts  useHighlighter.ts  useRegionMemory.ts  useScrollCapture.ts  useTheme.ts  useUiElementDetection.ts
src/i18n/: i18n.ts
src/pages/: Components.tsx
src/services/: capture.ts  index.ts  ocr.ts  pin.ts  recording.ts  translation.ts
src/types/: capture.ts  domain.ts  index.ts  layer.ts  ocr.ts  pin.ts  recording.ts  translation.ts
src/utils/: error.ts  index.ts
(+24 files in other folders)
