[package]
name = "opensnip"
version = "1.0.0"
edition = "2021"

[lib]
name = "opensnip_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
ureq = "2"
urlencoding = "2"
thiserror = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
chrono = "0.4"
dirs = "5"
screenshots = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
    "Globalization",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = false

[profile.dev.package."*"]
opt-level = 2
